# miniwowbot

./: .env.cls.test  .env.example  .gitignore  ADB_AUDIT_COMPLETE.md  AIRTEST_ADB_QUICK_GUIDE.md  AIRTEST_ADB_SOLUTION.md  AUTO_START_EMULATOR_IMPLEMENTATION.md  Agents.md  CACHE_IMPROVEMENTS.md  CACHE_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CHARACTER_SELECTION_SUMMARY.md  CLS_FINAL_IMPLEMENTATION.md  CLS_INTEGRATION_GUIDE.md  CLS_LOGGER_SETUP_GUIDE.md  CLS_MIGRATION_COMPLETE.md  CLS_QUICK_START.md  CLS_SDK_MIGRATION_SUMMARY.md  CONFIG_LABEL_IMPLEMENTATION.md  CRON_BARK_NOTIFICATION_GUIDE.md  CRON_EMULATOR_FIX.md  CRON_SCRIPT_IMPROVEMENTS.md  DOCKER_SETUP.md  FINAL_SUMMARY.md  FLOCK_FIX_SUMMARY.md  GEMINI.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LOGGING_NAME_GUIDE.md  LOGGING_REFACTOR_FINAL.md  LOGGING_REFACTOR_SUMMARY.md  LOKI_ARCHITECTURE_VISUAL.md  LOKI_CONFIG_LABEL_GUIDE.md  LOKI_IMPLEMENTATION_SUMMARY.md  LOKI_INTEGRATION_COMPLETE.md  LOKI_LABELS_DETAILED_GUIDE.md  LOKI_LABELS_SUMMARY.md  LOKI_QUICK_REFERENCE.md  LOKI_QUICK_START.md  LOKI_SETUP.md  (+123 more)
.claude/: settings.local.json
auction.air/: auction.py
auto_dungeon_simple.air/: __init__.py  auto_dungeon_simple.py
configs/: README.md  deathknight.json  default.json  demonhunter.json  druid.json  hunter.json  mage.json  mage_alt.json  monk.json  paladin.json  priest.json  rogue.json  shaman.json  test_quick_afk.json  warlock.json  warrior.json
database/: __init__.py  dungeon_db.py  dungeon_progress.db  dungeon_progress.db.backup_20251007_164723
docs/: AUTO_DUNGEON_REGIONS.md  BARK_NOTIFICATION_GUIDE.md  CHARACTER_SELECTION_GUIDE.md  EMULATOR_DEVICE_CHECK.md  GRACEFUL_STOP_GUIDE.md  MULTI_CONFIG_GUIDE.md  OCR_API.md  OCR_REGION_SEARCH.md  OCR_REGION_SUMMARY.md  OCR_VISUALIZATION.md  SMART_SKIP_GUIDE.md  TEST_ACCOUNTS_SETUP.md
examples/: diagnose_loki.py  multi_config_example.sh  ocr_region_example.py  test_airtest_log.py  test_loki_basic.py  test_loki_logger.py
grafana-dashboards/: miniwow_autodungeon_logs.json
levelup.air/: actions.py  behavior_rule.py  behavior_setup.py  behavior_tree.py  config.py  detectors.py  engine.py  levelup.py  main.py  pyproject.toml  state.py  templates.py  utils.py
m14.air/: m14.py
royalcollect.air/: royalcollect.py
scripts/: __init__.py  a_share_daily_report_data.py  a_share_daily_report_exporter.py  a_share_daily_report_fetcher.py  a_share_daily_report_renderer.py  add_timeout_exception_messages.py  bluestack-tool.py  create_worktree.py  gen_promtail_test_logs.py  generate_a_share_daily_report.py  kill_all_emulators.py  kill_bluestacks_instance.ps1  kill_bluestacks_port.ps1  quick_test_ocr_api.py  run_promtail.sh  set-dungeon-selected.ps1  start_ocr_docker.ps1  start_ocr_docker.sh
test_output/: screenshot_res.json  test_screenshot_res.json
tests/: README_DAILY_COLLECT_TEST.md  VSCODE_TEST_LOGGING.md  airtest_device_utils.py  conftest.py  test_a_share_daily_report.py  test_a_share_daily_report_fetcher.py  test_account_config.py  test_airtest_device_utils.py  test_auto_combat_timeout.py  test_auto_dungeon_daily_regression.py  test_auto_dungeon_integration.py  test_auto_market_query.py  test_auto_start_emulator.py  test_back_to_main.py  test_bark_notification_lazy_load.py  test_bluestack_tool.py  test_bluestack_tool_integration.py  test_check_progress_daily_tasks.py  test_cls_logger.py  test_config.py  test_config_loader.py  test_config_loader_fix.py  test_core_logic_refactor.py  test_create_worktree_script.py  test_cron_launcher.py  test_cron_run_all_dungeons.py  test_cron_run_windows.py  test_cron_windows_fix.py  test_daily_collect_persistence.py  test_daily_collect_tracking.py  (+46 more)
(+16 files in other folders)
