[project]
name = "miniwow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "peewee>=3.17.0",
    "pytest>=8.4.2",
    "imagehash>=4.3.2",
    "dotenv>=0.9.9",
    "pytest-timeout>=2.4.0",
    "wrapt-timeout-decorator>=1.5.1",
    "setuptools>=80.9.0",
    "coloredlogs>=15.0.1",
    "paddleocr>=3.3.1",
    "paddlepaddle>=3.2.0",
    "opencv-python>=4.11.0.86",
    "airtest>=1.2.7",
    "transitions>=0.9.0",
    "streamlit>=1.39.0",
    "pandas>=2.2.0",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]
