[project]
name = "miniwow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "peewee>=3.17.0",
    "pytest>=9.0.2",
    "imagehash>=4.3.2",
    "pytest-timeout>=2.4.0",
    "setuptools>=80.9.0",
    "coloredlogs>=15.0.1",
    "airtest>=1.4.3",
    "transitions>=0.9.0",
    "streamlit>=1.52.2",
    "pandas>=2.2.0",
    "streamlit-autorefresh>=1.0.1",
    "requests>=2.32.5",
    "opencv-python-headless>=4.11.0.86",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
    "vibe-ocr>=0.1.5",
    "vibe-colored-logger>=0.1.0",
    "pushover-complete>=1.5.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "prometheus-client>=0.24.1",
    "httpx>=0.28.1",
    "textual>=8.0.0",
]

[dependency-groups]
dev = ["pyright>=1.1.407", "pytest>=9.0.2", "pytest-asyncio>=1.3.0"]

[tool.ruff]
line-length = 100

[tool.uv]
# 声明你需要支持的平台集合：macOS arm64 + Windows x64（可选再加 Windows arm64）
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
    # 如果你也要支持 Windows on ARM，可打开这一行
    # "sys_platform == 'win32' and platform_machine == 'ARM64'",
]


# 关键：把 pywin32 覆盖成“仅 Windows 安装”
# 这样就算有上游把 pywin32 误写成跨平台依赖，也会被你这里纠正回去
override-dependencies = ["pywin32==311; sys_platform == 'win32'"]

[tool.poe.tasks]
web = "uv run streamlit run dashboard_runtime_status.py"
stats = "uv run check_progress.py"
cron = "uv run cron_run_all_dungeons.py"
test = "pytest tests/"
lint = "ruff check . &&  pyright"
tui = "uv run auto_dungeon_tui.py"
api = "uv run uvicorn api_server:app --host 0.0.0.0 --port 8000"
panic-stop = "uv run python -m scripts.kill_all_emulators"
